# DynTaxRL-PolicyOpt

./: README.md  pyproject.toml  requirements.txt
configs/: experiment.yaml
data/synthetic/: productivity_priors.csv
docs/: architecture.md  evaluation_plan.md  methodology.md
docs/governance/: risk_register.md
src/dtr/: __init__.py  cli.py
src/dtr/agents/: pg.py  q_learning.py
src/dtr/envs/: tax_env.py
src/dtr/eval/: metrics.py  ope.py
src/dtr/utils/: config.py
tests/: test_demo.py
