[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dtr"
version = "0.1.0"
description = "Dynamic tax policy optimization via reinforcement learning under uncertainty."
authors = [{name="Research Group"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "PyYAML>=6.0.0"
]

[project.urls]
homepage = "https://example.com"
repository = "https://example.com"
